[package]
name = "anza"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
axum = { version = "0.8.9", features = ["macros"] }
tower-http = { version = "0.6.11", features = ["fs", "cors", "set-status"] }
notify = "8.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
clap = { version = "4.6.1", features = ["derive"] }
futures-util = "0.3.32"
walkdir = "2.5.0"
swc_common = { version = "23.0.1", features = ["concurrent"] }
swc_ecma_parser = "41.0.0"
swc_ecma_ast = "25.0.0"
swc_ecma_visit = "25.0.0"
logs = { path = "src/logs" }
scraper = "0.27.0"
rayon = "1.12.0"
